[gd_scene load_steps=3 format=3 uid="uid://hd2x4mx75deu"]

[ext_resource type="Script" uid="uid://bw8sx1jrkhsr3" path="res://scripts/spawner.gd" id="1_2vbf6"]
[ext_resource type="PackedScene" uid="uid://cxhgfugd6l84g" path="res://scenes/enemy.tscn" id="2_ik2nu"]

[node name="EnemySpawner" type="Node2D"]
script = ExtResource("1_2vbf6")

[node name="EnemyContainer" type="Node2D" parent="."]
y_sort_enabled = true

[node name="Enemy1" parent="EnemyContainer" instance=ExtResource("2_ik2nu")]
position = Vector2(0, -10)
collision_mask = 0

[node name="Enemy2" parent="EnemyContainer" instance=ExtResource("2_ik2nu")]
position = Vector2(0, -10)
collision_mask = 0

[node name="Enemy3" parent="EnemyContainer" instance=ExtResource("2_ik2nu")]
position = Vector2(0, -10)
collision_mask = 0

[node name="Enemy4" parent="EnemyContainer" instance=ExtResource("2_ik2nu")]
position = Vector2(0, -10)
collision_mask = 0

[node name="Enemy5" parent="EnemyContainer" instance=ExtResource("2_ik2nu")]
position = Vector2(0, -10)
collision_mask = 0

[node name="Enemy6" parent="EnemyContainer" instance=ExtResource("2_ik2nu")]
position = Vector2(0, -10)
collision_mask = 0

[node name="LeftCorner" type="Marker2D" parent="."]
position = Vector2(0, -5)

[node name="Left" type="Marker2D" parent="."]
position = Vector2(45, -5)

[node name="Center" type="Marker2D" parent="."]
position = Vector2(90, -5)

[node name="Right" type="Marker2D" parent="."]
position = Vector2(135, -5)

[node name="RightCorner" type="Marker2D" parent="."]
position = Vector2(180, -5)

[node name="Timer" type="Timer" parent="."]
autostart = true
